--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -22,13 +22,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - name: Deploy to GH Pages
+      - name: Setup Git Credentials
         run: |
           git config --global user.email ${{secrets.GITHUB_EMAIL}}
           git config --global user.name  ${{secrets.GITHUB_USERNAME}}
 
           git remote set-url origin https://${{secrets.GITHUB_PERSONAL_ACCESS_TOKEN}}@github.com/covid19-stats.git
-
-          ./deploy.sh
+      - name: Deploy to GH Pages
+        run: ./deploy.sh
     env:
       CI: true
