--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -27,7 +27,7 @@ jobs:
           git config --global user.email ${{secrets.GITHUB_EMAIL}}
           git config --global user.name  ${{secrets.GITHUB_USERNAME}}
 
-          git remote set-url origin https://${{secrets.GITHUB_PERSONAL_ACCESS_TOKEN}}@github.com/covid19-stats.git
+          git remote set-url origin https://${{secrets.GITHUB_USERNAME}}:${{secrets.GITHUB_PERSONAL_ACCESS_TOKEN}}@github.com/${{secrets.GITHUB_USERNAME}}/covid19-stats.git
 
           ssh -T git@github.com
       - name: Deploy to GH Pages
